--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1,34 +1,30 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!--
 Copyright BRAINTRIBE TECHNOLOGY GMBH, Austria, 2002-2022
-
 This library is free software; you can redistribute it and/or modify it under the terms of the GNU Lesser General Public
 License as published by the Free Software Foundation; either version 3 of the License, or (at your option) any later version.
-
 This library is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more details.
-
 You should have received a copy of the GNU Lesser General Public License along with this library; See http://www.gnu.org/licenses/.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+--><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>tribefire.extension.antivirus</groupId>
     <artifactId>parent</artifactId>
-    <version>2.1.3</version>
+    <version>3.0.1</version>
     <packaging>pom</packaging>
     <properties>
         <java.version>1.8</java.version>
-        <V.tribefire.extension.antivirus>[2.1,2.2)</V.tribefire.extension.antivirus>
-        <V.tribefire.setup.classic.env>[2.2,2.3)</V.tribefire.setup.classic.env>
-        <V.com.braintribe.gm>[1.0,1.1)</V.com.braintribe.gm>
-        <V.com.braintribe.common>[1.0,1.1)</V.com.braintribe.common>
-        <V.tribefire.cortex>[2.0,2.1)</V.tribefire.cortex>
-        <V.com.braintribe.wire>[1.0,1.1)</V.com.braintribe.wire>
-        <V.com.braintribe.execution>[1.0,1.1)</V.com.braintribe.execution>
-        <V.com.braintribe.networktools>[1.0,1.1)</V.com.braintribe.networktools>
-        <V.tribefire.cortex.services>[2.0,2.1)</V.tribefire.cortex.services>
+        <V.tribefire.extension.antivirus>[3.0,3.1)</V.tribefire.extension.antivirus>
+        <V.tribefire.setup.classic.env>[3.0,3.1)</V.tribefire.setup.classic.env>
+        <V.com.braintribe.gm>[2.0,2.1)</V.com.braintribe.gm>
+        <V.com.braintribe.common>[2.0,2.1)</V.com.braintribe.common>
+        <V.tribefire.cortex>[3.0,3.1)</V.tribefire.cortex>
+        <V.com.braintribe.wire>[2.0,2.1)</V.com.braintribe.wire>
+        <V.com.braintribe.execution>[2.0,2.1)</V.com.braintribe.execution>
         <V.com.googlecode.junit-toolbox>2.4</V.com.googlecode.junit-toolbox>
         <V.org.apache.httpcomponents.httpmime>4.5.13</V.org.apache.httpcomponents.httpmime>
-        <V.com.github.Cloudmersive.Cloudmersive.APIClient.Java>v4.20</V.com.github.Cloudmersive.Cloudmersive.APIClient.Java>
+        <V.com.github.Cloudmersive.Cloudmersive.APIClient.Java>v4.25</V.com.github.Cloudmersive.Cloudmersive.APIClient.Java>
+        <V.com.google.code.gson>2.10.1</V.com.google.code.gson>
     </properties>
     <licenses>
         <license>
