--- a/antivirus-connector/pom.xml
+++ b/antivirus-connector/pom.xml
@@ -55,7 +55,7 @@ You should have received a copy of the GNU Lesser General Public License along w
         <dependency>
             <groupId>com.github.Cloudmersive</groupId>
             <artifactId>Cloudmersive.APIClient.Java</artifactId>
-            <version>${V.com.github.Cloudmersive.Cloudmersive.APIClient.Java}</version>
+            <version>${V.com.github.Cloudmersive}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
