--- a/antivirus-connector/pom.xml
+++ b/antivirus-connector/pom.xml
@@ -55,12 +55,12 @@ You should have received a copy of the GNU Lesser General Public License along w
         <dependency>
             <groupId>com.github.Cloudmersive</groupId>
             <artifactId>Cloudmersive.APIClient.Java</artifactId>
-            <version>${V.com.github.Cloudmersive}</version>
+            <version>${V.com.github.Cloudmersive.Cloudmersive.APIClient.Java}</version>
         </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>${V.com.google.code.gson}</version>
-        </dependency>
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>${V.com.google.code.gson}</version>
+		</dependency>        
     </dependencies>
 </project>
