switch to liferay repository (at least versions are normalized there)

--- a/repository-configuration-ci.yaml
+++ b/repository-configuration-ci.yaml
@@ -24,8 +24,8 @@
       url: "https://repo1.maven.org/maven2/",
     },
     !com.braintribe.devrock.model.repository.MavenHttpRepository {
-      name: "jitpack.io",
-      url: "https://jitpack.io",
+      name: "liferay",
+      url: "https://repository.liferay.com/nexus/content/repositories/public/",
     },
   ]
 }
